--- a/page-instagram/css/style.css
+++ b/page-instagram/css/style.css
@@ -35,11 +35,41 @@ ao centro com displat flex */
     align-items: center;
     justify-content: center;
     width: 50%;
+    margin-right: 1rem;
 }
 
-.instagram-phone img {
-    height: 47rem;
+.instagram-phone img {  
+    height: 40rem;
 }
+
+/* estilização do slide - alinhamento do conteiner */
+.slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    margin-right: 1rem;
+    position: absolute;
+}
+
+/* estilizando as imagens do slide */
+.slide img {  
+    opacity: 0;
+
+    height: 28rem;
+    position: absolute;
+    margin-top: 0.7rem;
+    margin-left: 6.6rem;
+    border: 1px solid gray;
+
+    transition: opacity 1000ms;
+}
+
+.slide img.selected{
+    opacity: 1;
+}
+
+
 
 /* estilizando a segunda coluna alinhando ao centro */
 .instagram-continue {
@@ -150,15 +180,19 @@ sua posição */
 
 /* media queries - códigos para compatibilidade no tamanho das telas*/
 
-/* telas de até 1024px */
-@media (max-width: 1024px) {
+/* telas de até 1050px */
+@media (max-width: 1050px) {
     .instagram-wrapper {
         width: 90%;
+    }
+
+    .instagram-phone{
+        margin-right: 1rem;
     }
 }
 
 /* Para telas de smartphone até 650px */
-@media (max-width: 650px) {
+@media (max-width: 770px) {
     body {
         background-color: #ffffff;
     }
@@ -168,6 +202,10 @@ sua posição */
     }
 
     .instagram-phone {
+        display: none;
+    }
+
+    .instagram-tela {
         display: none;
     }
 
